# Workex

./: .gitignore  Cargo.toml  README.md  WORKERD_PR.md  demo.ps1  demo.sh  package-lock.json  package.json
benchmarks/results/: 10m-suspended-agents.json  1m-real-contexts.json  1m-suspended-agents.json  shared-runtime-10k.json  unified-v1.json  unified-v10.json  unified-v11.json  unified-v12.json  unified-v13.json  unified-v14.json  unified-v2.json  unified-v3.json  unified-v4.json  unified-v5.json  unified-v6.json  unified-v7.json  unified-v8.json  unified-v9.json  v1.json  v2.json  v3-real-workers.json  v4-1m-isolates.json  worker-compat.json
benchmarks/scripts/: bench-common.mjs  k6-test.js  node-server.mjs  run-k6.sh  unified-bench.mjs  v8-bench.mjs  v8-rss-bench.mjs  v8-rss-real.mjs  worker-compat-test.mjs  workers-bench.mjs  workers-rss-real.mjs
benchmarks/scripts/worker/: wrangler.toml
benchmarks/scripts/worker/.wrangler/cache/: cf.json
benchmarks/scripts/worker/.wrangler/state/v3/cache/miniflare-CacheObject/: metadata.sqlite-shm  metadata.sqlite-wal
benchmarks/scripts/worker/.wrangler/tmp/bundle-1G6BXC/: middleware-insertion-facade.js  middleware-loader.entry.ts
benchmarks/scripts/worker/.wrangler/tmp/dev-YsIVxU/: index.js  index.js.map
benchmarks/scripts/worker/src/: index.ts
crates/workex-bench/: Cargo.toml
crates/workex-bench/src/: benchmarks.rs  continuation_bench.rs  lib.rs  main.rs  measure.rs  million_bench.rs  million_real_bench.rs  results.rs  rss_bench.rs  rss_real_bench.rs  shared_bench.rs  ten_million_bench.rs  unified.rs  v8_baseline.rs  worker_test.rs
crates/workex-cli/: Cargo.toml
crates/workex-cli/src/: config.rs  lib.rs  main.rs  server.rs  workerd_compat.rs
crates/workex-compiler/: Cargo.toml
crates/workex-compiler/src/: codegen.rs  emit.rs  hir.rs  hybrid.rs  lib.rs  lower.rs
crates/workex-compiler/src/bytecode/: mod.rs
crates/workex-compiler/src/cps/: transform.rs
crates/workex-compiler/tests/: end_to_end.rs  parse_hello_worker.rs
crates/workex-core/: Cargo.toml
crates/workex-core/src/: arena.rs  isolate.rs  lib.rs  rss.rs
crates/workex-runtime/: Cargo.toml
crates/workex-runtime/src/: d1.rs  engine.rs  env.rs  fetch.rs  fetch_bridge.rs  headers.rs  kv.rs  lib.rs  registry.rs  request.rs  response.rs  shared_runtime.rs  streaming.rs  websocket.rs
crates/workex-runtime/tests/: worker_execution.rs
crates/workex-vm/: Cargo.toml
crates/workex-vm/src/: continuation.rs  hibernation.rs  lib.rs  scheduler.rs  slab.rs  vm.rs
crates/workex-vm/tests/: pipeline.rs
kenton-response/: .dockerignore  .gitignore  Dockerfile  PLAN.md  README.md  TESTING.md  build_all.sh  run_all.sh  run_three.sh
kenton-response/PR_DRAFTS/: README.md  _template_workerd_response_with_numbers.md  issue-6595-comment-TO-POST.md  v8-cl-description.md  v8-dev-rfc.md  workerd-benchmark-harness-pr.md  workerd-benchmark-pr-final.md  workerd-enable-shared-ro-heap-PR.md  workerd-issue-6595-BREAKTHROUGH.md  workerd-issue-6595-response-FINAL.md  workerd-issue-6595-response.md  workerd-issue-comment-FINAL.md
kenton-response/benchmarks/: CMakeLists.txt  README.md  _self_test.cc  _syntax_check.bat  build.sh  common.cc  common.h  fetch_and_build_v8.sh  p1_serialization_cost.cc  p2_resume_cost.cc  run.sh
kenton-response/docs/: P1_METHODOLOGY.md  P2_METHODOLOGY.md  P3_DESIGN.md
kenton-response/scripts/: _test_summarize.sh  summarize.py
kenton-response/src/solution/: v8-0001-bazel-add-shared-ro-heap-flag.patch  workerd-enable-shared-ro-heap.patch
kenton-response/src/solution/cage-compatible-ro/: DESIGN.md  cross_cage_proto  cross_cage_shared_ro_proto.cc  stress  stress.cc  v8_phase_a_patch.diff
kenton-response/src/solution/cage-compatible-ro/v8_integration/: shared-ro-slab.cc  shared-ro-slab.h
kenton-response/src/v8-cow/: CMakeLists.txt  README.md  RFC.md  _compile_test.bat  _syntax_check.bat  apply_patch_and_build.sh  build.sh  cow_builtins_prototype.cc  heap_classifier.cc  hooks_reference.md  memory_benchmark.cc  patch_skeleton.diff
kenton-response/src/v8-shared-heap/: README.md  RFC.md  data_structure_prototype.cc  heap_region_pool.cc
tests/workers/: hello.ts
