[workspace]
members = [
    "crates/workex-core",
    "crates/workex-compiler",
    "crates/workex-runtime",
    "crates/workex-cli",
    "crates/workex-bench",
    "crates/workex-vm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/user/workex"

[workspace.dependencies]
oxc_parser = "0.125"
oxc_allocator = "0.125"
oxc_ast = "0.125"
oxc_span = "0.125"
oxc_codegen = "0.125"
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
cranelift-jit = "0.116"
cranelift-module = "0.116"
cranelift-native = "0.116"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
http-body-util = "0.1"
rquickjs = { version = "0.9", features = ["classes", "properties", "parallel"] }
sled = "0.34"
rusqlite = { version = "0.31", features = ["bundled"] }
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "blocking"] }
bincode = "1"
