[package]
name = "workex-bench"
version.workspace = true
edition.workspace = true

[[bin]]
name = "workex-bench"
path = "src/main.rs"

[[bin]]
name = "rss-bench"
path = "src/rss_bench.rs"

[[bin]]
name = "worker-test"
path = "src/worker_test.rs"

[[bin]]
name = "rss-real-bench"
path = "src/rss_real_bench.rs"

[[bin]]
name = "million-bench"
path = "src/million_bench.rs"

[[bin]]
name = "unified-bench"
path = "src/unified.rs"

[[bin]]
name = "shared-bench"
path = "src/shared_bench.rs"

[[bin]]
name = "million-real-bench"
path = "src/million_real_bench.rs"

[[bin]]
name = "continuation-bench"
path = "src/continuation_bench.rs"

[dependencies]
workex-core = { path = "../workex-core" }
workex-compiler = { path = "../workex-compiler" }
workex-runtime = { path = "../workex-runtime" }
workex-vm = { path = "../workex-vm" }
oxc_parser = { workspace = true }
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_span = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
