[package]
name = "workex-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "workex-server"
path = "src/server.rs"

[dependencies]
workex-core = { path = "../workex-core" }
workex-compiler = { path = "../workex-compiler" }
workex-runtime = { path = "../workex-runtime" }
anyhow = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
serde_json = { workspace = true }
