[package]
name = "workex-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "workex"
path = "src/main.rs"

[[bin]]
name = "workex-server"
path = "src/server.rs"

[dependencies]
workex-core = { path = "../workex-core" }
workex-compiler = { path = "../workex-compiler" }
workex-runtime = { path = "../workex-runtime" }
anyhow = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
