[package]
name = "workex-compiler"
version.workspace = true
edition.workspace = true

[dependencies]
oxc_parser = { workspace = true }
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_span = { workspace = true }
cranelift-codegen = { workspace = true }
cranelift-frontend = { workspace = true }
cranelift-jit = { workspace = true }
cranelift-module = { workspace = true }
cranelift-native = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
