[package]
name = "workex-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rquickjs = { workspace = true }
workex-compiler = { path = "../workex-compiler" }
sled = { workspace = true }
rusqlite = { workspace = true }
reqwest = { workspace = true }
oxc_parser = { workspace = true }
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_span = { workspace = true }
oxc_codegen = { workspace = true }
