[package]
name = "workex-vm"
version.workspace = true
edition.workspace = true

[dependencies]
workex-core = { path = "../workex-core" }
workex-compiler = { path = "../workex-compiler" }
workex-runtime = { path = "../workex-runtime" }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
sled = { workspace = true }
bincode = { workspace = true }
futures = { workspace = true }
